@@ -206,6 +206,9 @@ Trunk -  Unreleased
     HIVE-885. Better error messages for debugging serde problem at reducer
     input (Zheng Shao via namit)
 
+    HIVE-883. URISyntaxException when partition value contains special chars
+    (Zheng Shao via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
